// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/date-picker/demo/basic.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select month"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <span>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select week"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/date-render.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input ant-input-disabled"
        disabled=""
        placeholder="Select date"
        readonly=""
        value="2015-06-06"
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input ant-input-disabled"
        disabled=""
        placeholder="Select date"
        readonly=""
        value="2015-06"
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="-1"
  >
    <span
      class="ant-calendar-picker-input ant-input ant-input-disabled"
    >
      <input
        class="ant-calendar-range-picker-input"
        disabled=""
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value="2015-06-06"
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        disabled=""
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value="2015-06-06"
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/disabled-date.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
    style="width:195px"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select month"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/extra-footer.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <span
    class="ant-calendar-picker"
    style="width:195px"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select month"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/format.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value="2015/01/01"
      />
      <i
        class="anticon anticon-close-circle ant-calendar-picker-clear"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </i>
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value="2015/01"
      />
      <i
        class="anticon anticon-close-circle ant-calendar-picker-clear"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </i>
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value="2015/01/01"
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value="2015/01/01"
      />
      <i
        class="anticon anticon-close-circle ant-calendar-picker-clear"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </i>
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/mode.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
    style="width:195px"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start month"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End month"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/presetted-ranges.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select Month"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
  >
    <span>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select Week"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/start-end.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
    style="width:195px"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Start"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <span
    class="ant-calendar-picker"
    style="width:195px"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="End"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/time.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
    style="width:195px"
  >
    <div>
      <input
        class="ant-calendar-picker-input ant-input"
        placeholder="Select Time"
        readonly=""
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </div>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-picker-input ant-input"
    >
      <input
        class="ant-calendar-range-picker-input"
        placeholder="Start Time"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="ant-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="ant-calendar-range-picker-input"
        placeholder="End Time"
        readonly=""
        tabindex="-1"
        value=""
      />
      <i
        class="anticon anticon-calendar ant-calendar-picker-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;
